tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/shifting-50/a/to_b_tproxy/_test_context/VirtualService.1884271435.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
      weight: 50
    - destination:
        host: tproxy
      weight: 50
